# opm-geochemistry

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CMakeLists_files.cmake  LICENSE.MIT  README.md  dune.module  opm-geochemistry-prereqs.cmake
cmake/Modules/: FindApprovalTests.cmake  FindCatch2.cmake  Findcereal.cmake  Findnlohmann_json.cmake
doc/doxygen/: Doxyfile.in
doc/tutorials/: README.md
doc/tutorials/geochemx/complex/html/: complex-readable.html
doc/tutorials/geochemx/complex/markdown/: #main_complex.md#  main_complex.md
doc/tutorials/geochemx/complex/notebook/: main_complex.ipynb
doc/tutorials/geochemx/equilibrium_phases/markdown/: main_equilibrium_phases.md
doc/tutorials/geochemx/gas_phase/html/: ._gas_phase-readable000.html
doc/tutorials/opm_flow/adsorption/: transportII.md
docs/: index.html
docs/tutorials/opm_flow/adsorption/: transportII.html
docs/tutorials/opm_flow/mineral_interaction/: magnesite_calcite_example.html  magnesite_calcite_example.md
docs/tutorials/opm_flow/phreeqc_ex_11/: PHREEQC_ex_11.html  PHREEQC_ex_11.md
examples/: GeoChemX.cpp  ThermoX.cpp
flow/: flow_blackoil_geochemistry.cpp  flow_onephase_geochemistry.cpp
opm/models/io/: vtkgeochemistrymodule.hpp  vtkgeochemistryparams.cpp  vtkgeochemistryparams.hpp
opm/simulators/: GeochemPythonInterface.py.cxx  pybind11.hxx
opm/simulators/flow/: FlowProblemGeochemistry.hpp  GeochemistryModel.hpp
opm/simulators/geochemistry/: GeoChemIF.cpp  GeoChemIF.h  OpmGeoChemInterface.cpp  OpmGeoChemInterface.hpp  StandaloneSolvers.cpp  StandaloneSolvers.hpp
opm/simulators/geochemistry/Common/: ChemGlobal.cpp  ChemGlobal.h  Constants.hpp  CustomExceptions.hpp  Enums.hpp  SerializeForTesting.hpp
opm/simulators/geochemistry/Core/: ChemBasVec.cpp  ChemBasVec.h  ChemGCSolver.cpp  ChemGCSolver.h  ChemInitChem.cpp  ChemInitChem.h  ChemParam.h  ChemState.hpp  ChemTable.cpp  ChemTable.h  GeoChemPhases.cpp  GeoChemPhases.hpp  GeoChemSolutionsManager.cpp  GeoChemSolutionsManager.hpp  MineralKinetics.cpp  MineralKinetics.hpp  SimulationSchedule.cpp  SimulationSchedule.hpp  SurfaceChemistry.cpp  SurfaceChemistry.hpp
opm/simulators/geochemistry/Database/: ChemDatabaseHKF.hpp  ChemDatabaseHKF_aq.cpp  ChemDatabaseHKF_basis.cpp  ChemDatabaseHKF_buffer.cpp  ChemDatabaseHKF_surface.cpp
opm/simulators/geochemistry/Extra/: DiffuseLayerIntegrand.hpp
opm/simulators/geochemistry/IO/: ErrorMsg.hpp  FileFunctions.cpp  FileFunctions.hpp  GeoLogger.cpp  GeoLogger.hpp  InputFileHandler.cpp  InputFileHandler.hpp  InputReader.cpp  InputReader.hpp  NetCDF.cpp  NetCDF.hpp  ParseChemistry.cpp  ParseChemistry.hpp  ParseUtil.cpp  ParseUtil.hpp  fmt_include.hpp  input_m.cpp  input_m.h
opm/simulators/geochemistry/LinearAlgebra/: LinearSolverRoutines.cpp  LinearSolverRoutines.hpp
opm/simulators/geochemistry/Numerical/: BrentMethod.hpp  GaussLegendre.hpp  GaussLegendrePrecomputedTables.hpp  NumericalErrorPolicy.hpp  NumericalHelperFunctions.hpp  RootSolvers.hpp  SecantMethod.hpp
opm/simulators/geochemistry/SplayTree/: SplayTree.cpp  SplayTree.h  SplayTreeKeyCreator.cpp  SplayTreeKeyCreator.hpp  TreeNode.cpp  TreeNode.h
opm/simulators/geochemistry/Thermo/: eps_JN.cpp  eps_JN.h  hkf.cpp  hkf.h  ions.cpp  ions.h  thermodata.cpp  thermodata.h  water.cpp  water.h
opm/simulators/geochemistry/Utility/: HelperMacros.hpp  HelpfulStringMethods.cpp  HelpfulStringMethods.hpp  MiscUtilityFunctions.hpp
opm/simulators/utils/: moduleVersion.cpp  moduleVersion.hpp
pyGeoChem/: README.md  pyproject.toml
pyGeoChem/pyGeoChem/data/: basis_species.csv  elements.json  elements.xlsx  elements_reduced.csv
pyGeoChem/pyGeoChem/io_cpp_solver/: __init__.py  constants.py  run.py  thermo.py  util.py  writer.py
pyGeoChem/pyGeoChem/tests/: test_solution.py
python/: CMakeLists.txt
python/package/: CMakeLists.txt  setup.py.in
python/package/pygeochem/: __init__.py
tests/: CMakeLists.txt  test_opmgeocheminterface.cpp
tests/tests_using_catch2/: CMakeLists.txt  RandomMatrices.hpp  catch2_main.cpp  test_approval_transport.cpp  test_brent.cpp  test_cubicrootsolver.cpp  test_equilibrium_solver.cpp  test_gauss_legendre.cpp  test_geochem_phases.cpp  test_input_json.cpp  test_input_reader.cpp  test_integration_for_diffuse_layer.cpp  test_linear_algebra.cpp  test_parse_chemistry.cpp  test_string_functions.cpp  test_thermo.cpp  test_utility_functions.cpp
tests/tests_using_catch2/RunGeoChem/: CMakeLists.txt  GeoChemTestCase.hpp  RegisterTests.cpp  RegisterTests.hpp  SetupAndRunSolver.cpp  SetupAndRunSolver.hpp
tests/tests_using_catch2/RunGeoChem/cases_transport/: Test_InterpolationWithMineralsButNoSurfSpecies.hpp  Test_caco3_to_mgco3.hpp  Test_coreflood_interpolation.hpp  Test_mineral_activation_energy.hpp  Test_rate_and_equilibrium_minerals.hpp
tests/tests_using_catch2/approval_tests/: test_approval_transport.Test_1D_transport_cases.Calcite_to_Magnesite.approved.txt  test_approval_transport.Test_1D_transport_cases.Coreflood_with_interpolation.approved.txt  test_approval_transport.Test_1D_transport_cases.InterpolationWithMineralsButNoSurfSpecies.approved.txt  test_approval_transport.Test_1D_transport_cases.Test_mineral_activation_energy.approved.txt  test_approval_transport.Test_1D_transport_cases.test_rate_and_equilibrium_minerals.approved.txt
tests/tests_using_catch2/reference_results_eqsolver/: CMakeLists.txt  generate_reference_results.cpp
tests/tests_using_catch2/reference_results_eqsolver/EquilibriumTestCases/: CMakeLists.txt  GeoChemTestCase.hpp  RegisterEquilibriumTests.cpp  RegisterEquilibriumTests.hpp  SetupAndRunEqsolver.cpp  SetupAndRunEqsolver.hpp  Test1.hpp  Test1_DL.hpp  Test1_IO_DL.hpp  Test1_IO_equil.hpp  Test1_IO_only.hpp  Test1_Redox.hpp  Test2_sc1.hpp  Test2_sc1_DL.hpp  Test_add_mineral_phase.hpp  Test_with_kinetics.hpp
tests/tests_using_catch2/reference_results_eqsolver/refdata/: test1.cereal  test1_DL.cereal  test1_IO_DL.cereal  test1_IO_equil.cereal  test1_IO_only.cereal  test1_redox.cereal  test2_sc1.cereal  test2_sc1_DL.cereal  test_add_mineral_phase.cereal  test_with_kinetics.cereal
(+31 files in other folders)
